<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".activities.HomeActivity">

    <Button
        android:id="@+id/measurement_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/monitor_pavement_surface"
        android:layout_marginBottom="50dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/report_an_incident"
        android:layout_marginBottom="50dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/map"
        android:layout_marginBottom="50dp"
        android:textSize="30sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/logout"
        android:textSize="30sp" />

</LinearLayout>
