<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:drawablePadding="@dimen/form_icon_padding"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/ic_email_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_input_layout"
        android:layout_marginBottom="30dp" >

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:drawablePadding="@dimen/form_icon_padding"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/ic_password_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_input_layout"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true" >

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:drawablePadding="@dimen/form_icon_padding"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/ic_password_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_input_layout"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true" >

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textSize="30sp" />

</LinearLayout>
